--- a/net/socks5/Makefile
+++ b/net/socks5/Makefile
@@ -3,6 +3,7 @@
 # Date created:				24 Apr 1996
 # Whom:					pst
 #
+# $NetBSD: Makefile,v 1.2 1997/11/21 14:57:28 agc Exp $
 # FreeBSD Id: Makefile,v 1.14 1997/08/28 06:49:06 obrien Exp
 #
 
@@ -35,9 +36,10 @@ CONFIGURE_ARGS=	--with-libconffile=${PREFIX}/etc/libsocks5.conf \
 		--with-srvidtfile=/var/run/socks5.ident \
 		${EXTRA_CONFIGURE_ARGS}
 MAN1=		runsocks.1 socks5.1 stopsocks.1 socks5_clients.1
-MAN5=		libsocks5.conf.5 socks5.conf.5
+MAN5=		libsocks5.conf.5 socks5.conf.5 socks5.passwd.5
 
 post-install:
+	ln -fs ${PREFIX}/lib/libsocks5_sh.so ${PREFIX}/lib/libsocks5_sh.so.0.0
 	ldconfig -m ${PREFIX}/lib
 
 .include <bsd.port.mk>
