--- a/converters/Makefile
+++ b/converters/Makefile
@@ -1,19 +1,20 @@
-# $Id: Makefile,v 1.1.1.1 1997/11/22 03:06:19 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/11/22 03:13:23 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.8 1997/11/16 22:45:25 jseger Exp
 #
 
-    SUBDIR += btoa
-    SUBDIR += c2html
-    SUBDIR += ish
-    SUBDIR += kdesupport
-    SUBDIR += mimepp
-    SUBDIR += mpack
-    SUBDIR += p5-Convert-UU
-    SUBDIR += p5-MIME-Base64
-    SUBDIR += recode
-    SUBDIR += trans
-    SUBDIR += uudeview
-    SUBDIR += uudx
-    SUBDIR += uulib
-    SUBDIR += xdeview
+#    SUBDIR += btoa
+#    SUBDIR += c2html
+#    SUBDIR += ish
+#    SUBDIR += kdesupport
+#    SUBDIR += mimepp
+#    SUBDIR += mpack
+#    SUBDIR += p5-Convert-UU
+#    SUBDIR += p5-MIME-Base64		# in progress - hubertf
+#    SUBDIR += recode
+#    SUBDIR += trans
+#    SUBDIR += uudeview
+#    SUBDIR += uudx
+#    SUBDIR += uulib
+#    SUBDIR += xdeview
 
 .include <bsd.port.subdir.mk>
