--- a/security/Makefile
+++ b/security/Makefile
@@ -1,29 +1,30 @@
-# $Id: Makefile,v 1.1.1.1 1997/11/22 03:06:19 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1997/11/22 03:13:24 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.23 1997/11/09 10:17:02 asami Exp
 #
 
-    SUBDIR += SSLeay
-    SUBDIR += cfs
-    SUBDIR += cops
-    SUBDIR += crack
-    SUBDIR += donkey
-    SUBDIR += fwtk
-    SUBDIR += john
-    SUBDIR += libident
-    SUBDIR += p5-Authen-Radius
-    SUBDIR += p5-Crypt-DES
-    SUBDIR += p5-Crypt-IDEA
-    SUBDIR += p5-MD5
-    SUBDIR += p5-PGP
-    SUBDIR += pgp
-    SUBDIR += pidentd
-    SUBDIR += rsaref
-    SUBDIR += ssh
-    SUBDIR += sudo
-    SUBDIR += super
-    SUBDIR += swatch
-    SUBDIR += tcp_wrapper
-    SUBDIR += tripwire
-    SUBDIR += vscan
-    SUBDIR += xinetd
+#    SUBDIR += SSLeay
+#    SUBDIR += cfs
+#    SUBDIR += cops
+#    SUBDIR += crack
+#    SUBDIR += donkey
+#    SUBDIR += fwtk
+#    SUBDIR += john
+#    SUBDIR += libident
+#    SUBDIR += p5-Authen-Radius
+#    SUBDIR += p5-Crypt-DES
+#    SUBDIR += p5-Crypt-IDEA
+#    SUBDIR += p5-MD5			# in progress - hubertf
+#    SUBDIR += p5-PGP
+#    SUBDIR += pgp
+#    SUBDIR += pidentd
+#    SUBDIR += rsaref
+#    SUBDIR += ssh
+#    SUBDIR += sudo
+#    SUBDIR += super
+#    SUBDIR += swatch
+#    SUBDIR += tcp_wrapper
+#    SUBDIR += tripwire
+#    SUBDIR += vscan
+#    SUBDIR += xinetd
 
 .include <bsd.port.subdir.mk>
