--- a/mail/Makefile
+++ b/mail/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 1997/11/19 16:07:51 agc Exp $
+# $NetBSD: Makefile,v 1.4 1997/11/23 16:17:56 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.45 1997/08/13 18:35:22 andreas Exp 
 #
 
@@ -24,7 +24,7 @@
 #    SUBDIR += p5-Mail-POP3Client
 #    SUBDIR += p5-Mail-Tools
 #    SUBDIR += pgpsendmail
-#    SUBDIR += pine
+    SUBDIR += pine
 #    SUBDIR += popclient
 #    SUBDIR += poppassd
 #    SUBDIR += popper
