--- a/emulators/Makefile
+++ b/emulators/Makefile
@@ -1,27 +1,28 @@
+# $NetBSD: Makefile,v 1.2 1997/11/26 12:55:18 agc Exp $
 # FreeBSD Id: Makefile,v 1.14 1997/07/31 07:23:58 max Exp
 #
 
-    SUBDIR += aftp
-    SUBDIR += bsvc
-    SUBDIR += cpmemu
-    SUBDIR += cpmtools
-    SUBDIR += fmsx
-    SUBDIR += hfs
-    SUBDIR += ines
-    SUBDIR += linux_lib
-    SUBDIR += macutils
-    SUBDIR += mastergear
-    SUBDIR += mtools
-    SUBDIR += pcemu
-    SUBDIR += prodosemu
-    SUBDIR += sim6811
-    SUBDIR += spim
-    SUBDIR += stella
-    SUBDIR += tkhfs
-    SUBDIR += vgb
-    SUBDIR += vmsbackup
-    SUBDIR += wine
-    SUBDIR += x48
-    SUBDIR += xgs
+#    SUBDIR += aftp
+#    SUBDIR += bsvc
+#    SUBDIR += cpmemu
+#    SUBDIR += cpmtools
+#    SUBDIR += fmsx
+#    SUBDIR += hfs
+#    SUBDIR += ines
+#    SUBDIR += linux_lib
+#    SUBDIR += macutils
+#    SUBDIR += mastergear
+#    SUBDIR += mtools
+#    SUBDIR += pcemu
+#    SUBDIR += prodosemu
+#    SUBDIR += sim6811
+#    SUBDIR += spim
+#    SUBDIR += stella
+#    SUBDIR += tkhfs
+#    SUBDIR += vgb
+#    SUBDIR += vmsbackup
+#    SUBDIR += wine
+#    SUBDIR += x48
+#    SUBDIR += xgs
 
 .include <bsd.port.subdir.mk>
