Uppercase first character of COMMENT. (Lost in revision 1.3, but not documented so I assume was an accident.)

--- a/x11/render/Makefile
+++ b/x11/render/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2004/02/16 10:02:42 jlam Exp $
+# $NetBSD: Makefile,v 1.5 2004/03/01 17:58:19 reed Exp $
 
 DISTNAME=		render-0.8
 CATEGORIES=		x11
@@ -6,7 +6,7 @@ MASTER_SITES=		http://pdx.freedesktop.org/software/fontconfig/releases/
 
 MAINTAINER=		jlam@NetBSD.org
 HOMEPAGE=		http://pdx.freedesktop.org/software/fontconfig/releases/
-COMMENT=		headers for X11 render extension
+COMMENT=		Headers for X11 render extension
 
 CONFLICTS=		Xrender<0.8
 
