Update to version 0.9.18.
Changes:

0.9.18:
=======

Upgrade release because of couple serious bugs in the 0.9.17.  Especially
backup router had stability problems with 0.9.17.  This was due to a rekey bug
when performing rekey with PFS, and because of another bug it caused the
backup (and other servers too) to crash.  If you are running a normal server
or backup router then ugprading is strongly recommended.  If you are running
any kind of server with PFS enabled in rekey, upgrading is recommended.

- Fixed protocol completion handling in connection closing.
- Fixed rekey with PFS to work on backup with disabled connections.
- Fixed CMODE command reply to return the user limit correctly.
- Fixed the watch notify to be called for resuming clients.

0.9.17:
=======
- Implemented the user limit to the CMODE_CHANGE notify and to the CMODE
  and JOIN command replies, as defined in the new protocol specs.
- Implemented the public key support to WATCH command, as defined in
  the new protocol specs.
- Added asynchronous connecting to remote router/server.
- Fixed the WHOIS public key deleting.
- Several other bugfixes were also made.

--- a/chat/silc-server/Makefile
+++ b/chat/silc-server/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.30 2004/02/18 14:40:35 salo Exp $
+# $NetBSD: Makefile,v 1.31 2004/03/03 19:05:52 salo Exp $
 #
 
-DISTNAME=		silc-server-0.9.16
+DISTNAME=		silc-server-0.9.18
 CATEGORIES=		chat security
 MASTER_SITES=		http://www.silcnet.org/download/server/sources/ \
 			ftp://ftp.silcnet.org/silc/server/sources/ \
@@ -69,11 +69,11 @@ BUILD_DEFS+=		USE_INET6
 CONFIGURE_ARGS+=	--enable-ipv6
 .endif
 
-# If you want to debug silc-server, uncomment this.
+# If you want to debug silc-server, uncomment the line below.
 #
 #CONFIGURE_ARGS+=       --enable-debug
 
-.if (${MACHINE_ARCH} != "i386")
+.if ${MACHINE_ARCH} != "i386"
 CONFIGURE_ARGS+=	--disable-asm
 .endif
 
