Update gss to 0.0.10.
Changes since 0.0.6:
  - A command line tool "gss" added in src/.
  - gss_display_status can return multiple description texts (using context).
  - The Swedish translation has been updated.
  - Various cleanups and improvements.
  - Implemented gss_export_name and gss_krb5_inquire_cred_by_mech.
    The Kerberos 5 backend also support them.
  - gss_inquire_cred support default credentials.
  - Kerberos 5 gss_canonicalize_name now support all mandatory name types.
  - Kerberos 5 gss_accept_sec_context now support sub-session keys in AP-REQ.
  - Added new extended function API: gss_userok.
  - API documentation in HTML format from GTK-DOC included in doc/reference/.
  - Moved all backend specific code into sub-directories of lib/.
  - The gss_duplicate_name function now allocate the output result properly.
  - Man pages for all public functions are included.
  - Documentation fixes.  For example, all official APIs are now documented.
  - Fixed typo that broke gss_wrap for 3DES with Kerberos 5.
  - Improvements to build environment.
  - Autoconf 2.59, Automake 1.8 beta, Libtool CVS used.

--- a/security/gss/Makefile
+++ b/security/gss/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2004/02/14 18:26:29 jmmv Exp $
+# $NetBSD: Makefile,v 1.5 2004/03/04 18:54:42 minskim Exp $
 #
 
-DISTNAME=		gss-0.0.6
-PKGREVISION=		1
+DISTNAME=		gss-0.0.10
 CATEGORIES=		security
 MASTER_SITES=		http://josefsson.org/gss/releases/ \
 			${MASTER_SITE_GNU:=gss/}
@@ -10,6 +9,8 @@ MASTER_SITES=		http://josefsson.org/gss/releases/ \
 MAINTAINER=		xtraeme@NetBSD.org
 HOMEPAGE=		http://www.gnu.org/software/gss/
 COMMENT=		GNU Generic Security Service Library
+
+PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 GNU_CONFIGURE=		yes
 USE_BUILDLINK3=		yes
