Make Canna* packages use the buildlink framework.  It will fix the build problem reported by Yasushi Oshima on tech-pkg-ja@jp.NetBSD.org.

--- a/inputmethod/canna/Makefile.include
+++ b/inputmethod/canna/Makefile.include
@@ -1,5 +1,5 @@
-# $NetBSD: Makefile.include,v 1.1 2003/05/31 07:24:39 uebayasi Exp $
+# $NetBSD: Makefile.include,v 1.2 2004/03/05 19:09:22 minskim Exp $
 #
 
-.include "../../devel/nbitools/nbitools.mk"
+.include "../../devel/nbitools/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
