--- a/inputmethod/canna-server/Makefile
+++ b/inputmethod/canna-server/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.6 2003/09/23 15:14:55 uebayasi Exp $
+# $NetBSD: Makefile,v 1.7 2004/03/05 19:09:22 minskim Exp $
 #
 .include "../canna/Makefile.common"
 
 CANNA_MODULE=	server
 
-USE_BUILDLINK2=	# defined
+USE_BUILDLINK3=	# defined
 INSTALL_TARGET=	instserver
 
 USE_PKGINSTALL=	YES
@@ -38,7 +38,7 @@ do-configure:
 post-install:
 	@${INSTALL_SCRIPT} ${WRKDIR}/canna ${PREFIX}/etc/rc.d/canna
 
-.include "../../devel/nbitools/buildlink2.mk"
-.include "../../inputmethod/canna-lib/buildlink2.mk"
+.include "../../devel/nbitools/buildlink3.mk"
+.include "../../inputmethod/canna-lib/buildlink3.mk"
 
 .include "../canna/Makefile.include"
