--- a/inputmethod/canna/Makefile.common
+++ b/inputmethod/canna/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.7 2003/09/23 15:06:57 uebayasi Exp $
+# $NetBSD: Makefile.common,v 1.8 2004/03/05 19:09:22 minskim Exp $
 #
 # Canna common makefile.
 #
@@ -16,8 +16,7 @@ FILESDIR=	${.CURDIR}/../canna/files
 DISTINFO_FILE=	${.CURDIR}/../canna/distinfo
 PATCHDIR=	${.CURDIR}/../canna/patches
 
-# To be done.
-#USE_BUILDLINK2=	# defined
+USE_BUILDLINK3=	# defined
 
 .include "../canna/Makefile.version"
 
