--- a/mk/FreeBSD.pkg.dist
+++ b/mk/FreeBSD.pkg.dist
@@ -1,4 +1,4 @@
-#	$NetBSD: FreeBSD.pkg.dist,v 1.36 2004/02/25 18:44:53 jmmv Exp $
+#	$NetBSD: FreeBSD.pkg.dist,v 1.37 2004/03/07 01:13:27 snj Exp $
 #
 
 /set type=dir uname=root gname=wheel mode=0755
@@ -664,6 +664,10 @@
                 ..
             ..
             ms
+                LC_MESSAGES
+                ..
+            ..
+            nb
                 LC_MESSAGES
                 ..
             ..
