--- a/mk/IRIX.pkg.dist
+++ b/mk/IRIX.pkg.dist
@@ -1,4 +1,4 @@
-# $NetBSD: IRIX.pkg.dist,v 1.35 2004/02/25 18:44:53 jmmv Exp $
+# $NetBSD: IRIX.pkg.dist,v 1.36 2004/03/07 01:13:27 snj Exp $
 #
 
 /set type=dir uname=root gname=sys mode=0755
@@ -664,6 +664,10 @@
                 ..
             ..
             ms
+                LC_MESSAGES
+                ..
+            ..
+            nb
                 LC_MESSAGES
                 ..
             ..
