--- a/mk/NetBSD.pkg.dist
+++ b/mk/NetBSD.pkg.dist
@@ -1,5 +1,5 @@
 #     Id: BSD.local.dist,v 1.30 1997/08/01 13:16:39 phk Exp 
-#	$NetBSD: NetBSD.pkg.dist,v 1.62 2004/02/25 18:44:53 jmmv Exp $
+#	$NetBSD: NetBSD.pkg.dist,v 1.63 2004/03/07 01:13:27 snj Exp $
 #
 
 /set type=dir uname=root gname=wheel mode=0755
@@ -665,6 +665,10 @@
                 ..
             ..
             ms
+                LC_MESSAGES
+                ..
+            ..
+            nb
                 LC_MESSAGES
                 ..
             ..
