--- a/mk/SunOS.pkg.dist
+++ b/mk/SunOS.pkg.dist
@@ -1,5 +1,5 @@
 #     Id: BSD.local.dist,v 1.30 1997/08/01 13:16:39 phk Exp 
-#	$NetBSD: SunOS.pkg.dist,v 1.57 2004/02/25 18:44:53 jmmv Exp $
+#	$NetBSD: SunOS.pkg.dist,v 1.58 2004/03/07 01:13:27 snj Exp $
 #
 
 /set type=dir uname=root gname=sys mode=0755
@@ -271,6 +271,10 @@
                 ..
             ..
             ms
+                LC_MESSAGES
+                ..
+            ..
+            nb
                 LC_MESSAGES
                 ..
             ..
