--- a/devel/swig-perl/Makefile
+++ b/devel/swig-perl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2003/12/03 15:11:23 epg Exp $
+# $NetBSD: Makefile,v 1.2 2004/03/07 23:20:35 minskim Exp $
 
 PKGNAME=	swig-perl-${SWIG_VERSION}
 COMMENT=	Simplified Wrapper and Interface Generator, Perl runtime
@@ -10,5 +10,5 @@ CONFIGURE_ARGS+=	--with-perl5=${PERL5}
 ALL_TARGET=		runtime
 INSTALL_TARGET=		install-runtime
 
-.include "../../lang/perl5/buildlink2.mk"
+.include "../../lang/perl5/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
