--- a/mk/FreeBSD.x11.dist
+++ b/mk/FreeBSD.x11.dist
@@ -1,4 +1,4 @@
-#     $NetBSD: FreeBSD.x11.dist,v 1.7 2004/03/07 01:13:27 snj Exp $
+#     $NetBSD: FreeBSD.x11.dist,v 1.8 2004/03/08 19:43:14 jmmv Exp $
 #     FreeBSD Id: BSD.x11.dist,v 1.2 1997/06/10 07:55:10 asami Exp
 #
 
@@ -663,7 +663,5 @@
                 ..
             ..
         ..
-	pixmaps
-	..
     ..
 ..
