--- a/mk/Linux.pkg.dist
+++ b/mk/Linux.pkg.dist
@@ -1,5 +1,5 @@
 #     Id: BSD.local.dist,v 1.30 1997/08/01 13:16:39 phk Exp 
-#	$NetBSD: Linux.pkg.dist,v 1.53 2004/03/07 01:13:27 snj Exp $
+#	$NetBSD: Linux.pkg.dist,v 1.54 2004/03/08 19:43:14 jmmv Exp $
 #
 
 /set type=dir uname=root gname=sys mode=0755
@@ -925,8 +925,6 @@
 	    uk_UA.KOI8-U
 	    ..
         ..
-	pixmaps
-	..
         skel
         ..
     ..
