--- a/mk/NetBSD.pkg.dist
+++ b/mk/NetBSD.pkg.dist
@@ -1,5 +1,5 @@
 #     Id: BSD.local.dist,v 1.30 1997/08/01 13:16:39 phk Exp 
-#	$NetBSD: NetBSD.pkg.dist,v 1.63 2004/03/07 01:13:27 snj Exp $
+#	$NetBSD: NetBSD.pkg.dist,v 1.64 2004/03/08 19:43:14 jmmv Exp $
 #
 
 /set type=dir uname=root gname=wheel mode=0755
@@ -925,8 +925,6 @@
 	    uk_UA.ISO_8859-1
 	    ..
         ..
-	pixmaps
-	..
         skel
         ..
     ..
