--- a/mk/OpenBSD.x11.dist
+++ b/mk/OpenBSD.x11.dist
@@ -1,4 +1,4 @@
-#     $NetBSD: OpenBSD.x11.dist,v 1.25 2004/03/07 01:13:27 snj Exp $
+#     $NetBSD: OpenBSD.x11.dist,v 1.26 2004/03/08 19:43:14 jmmv Exp $
 #  	OpenBSD: BSD.x11.dist,v 1.4 2002/06/09 06:15:15 todd Exp 
 #	FreeBSD: BSD.x11.dist,v 1.2 1997/06/10 07:55:10 asami Exp
 
@@ -663,7 +663,5 @@
                 ..
             ..
         ..
-	pixmaps
-	..
     ..
 ..
