--- a/mk/SunOS.x11.dist
+++ b/mk/SunOS.x11.dist
@@ -1,4 +1,4 @@
-#     $NetBSD: SunOS.x11.dist,v 1.38 2004/03/07 01:13:27 snj Exp $
+#     $NetBSD: SunOS.x11.dist,v 1.39 2004/03/08 19:43:14 jmmv Exp $
 #     FreeBSD Id: BSD.x11.dist,v 1.2 1997/06/10 07:55:10 asami Exp
 #
 
@@ -662,8 +662,6 @@
         examples
         ..
 	fonts
-	..
-	pixmaps
 	..
     ..
 ..
