Enable tk84 and replace x11/tk with x11/tk83.  Packages compatible with 8.4 will be updated to depend on x11/tk after Tk update.

--- a/converters/xdeview/Makefile
+++ b/converters/xdeview/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2004/01/28 13:20:05 xtraeme Exp $
+# $NetBSD: Makefile,v 1.26 2004/03/08 20:27:14 minskim Exp $
 #
 
 DISTNAME=	uudeview-0.5.18
@@ -24,5 +24,5 @@ post-install:
 	${INSTALL_MAN} ${WRKSRC}/man/xdeview.1 ${PREFIX}/man/man1
 
 .include "../../converters/uulib/buildlink2.mk"
-.include "../../x11/tk/buildlink2.mk"
+.include "../../x11/tk83/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
