--- a/cad/xcircuit/Makefile
+++ b/cad/xcircuit/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2004/03/08 19:52:50 minskim Exp $
+# $NetBSD: Makefile,v 1.17 2004/03/08 20:27:13 minskim Exp $
 
 DISTNAME=	xcircuit-3.1.19
 CATEGORIES=	cad graphics
@@ -31,7 +31,7 @@ post-install:
 	${INSTALL_DATA} ${WRKSRC}/examples/* ${PREFIX}/share/examples/xcircuit/
 
 .include "../../graphics/xpm/buildlink2.mk"
-.include "../../x11/tk/buildlink2.mk"
+.include "../../x11/tk83/buildlink2.mk"
 .include "../../lang/tcl83/buildlink2.mk"
 .include "../../mk/ghostscript.mk"
 .include "../../mk/bsd.pkg.mk"
