--- a/chat/roxirc/Makefile
+++ b/chat/roxirc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2003/08/28 20:05:15 xtraeme Exp $
+# $NetBSD: Makefile,v 1.4 2004/03/08 20:27:13 minskim Exp $
 #
 
 DISTNAME=	roxirc-1.8
@@ -26,5 +26,5 @@ do-install:
 	${INSTALL_DATA} ${WRKSRC}/startup ${EXAMPLESDIR}/startup
 	${INSTALL_DATA} ${WRKSRC}/help ${PREFIX}/share/doc/roxirc/help
 
-.include "../../x11/tk/buildlink2.mk"
+.include "../../x11/tk83/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
