--- a/chat/tik/Makefile
+++ b/chat/tik/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2004/01/20 12:09:35 agc Exp $
+# $NetBSD: Makefile,v 1.7 2004/03/08 20:27:13 minskim Exp $
 #
 
 DISTNAME=		tik-0.90
@@ -9,7 +9,7 @@ MAINTAINER=		grant@NetBSD.org
 HOMEPAGE=		http://tik.sourceforge.net/
 COMMENT=		Tcl/Tk AOL Instant Messenger client
 
-DEPENDS+=		tk>=8.1:../../x11/tk
+DEPENDS+=		tk>=8.1:../../x11/tk83
 
 WRKSRC=			${WRKDIR}/tik
 NO_CONFIGURE=		# defined
