--- a/chat/tkicb/Makefile
+++ b/chat/tkicb/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2004/01/20 12:09:35 agc Exp $
+# $NetBSD: Makefile,v 1.10 2004/03/08 20:27:13 minskim Exp $
 #
 
 DISTNAME=	icb.2.1.4
@@ -38,5 +38,5 @@ do-install:
 		${WRKSRC}/lib/servers ${PREFIX}/libdata/tkicb/lib
 	${INSTALL_SCRIPT} ${WRKSRC}/lib/* ${PREFIX}/libdata/tkicb/lib
 
-.include "../../x11/tk/buildlink2.mk"
+.include "../../x11/tk83/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
