--- a/chat/zircon/Makefile
+++ b/chat/zircon/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2003/07/17 21:26:34 grant Exp $
+# $NetBSD: Makefile,v 1.7 2004/03/08 20:27:13 minskim Exp $
 #
 
 DISTNAME=	zircon-1.18.245
@@ -9,7 +9,7 @@ MAINTAINER=	frueauf@NetBSD.org
 HOMEPAGE=	http://catless.ncl.ac.uk/Programs/Zircon/
 COMMENT=	X11 interface to Internet Relay Chat
 
-DEPENDS+=	tk>=8.3.2:../../x11/tk
+DEPENDS+=	tk>=8.3.2:../../x11/tk83
 
 INTERACTIVE_STAGE=	install
 NO_BUILD=	yes
