--- a/comms/tkhylafax/Makefile
+++ b/comms/tkhylafax/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.23 2004/01/20 12:10:01 agc Exp $
+# $NetBSD: Makefile,v 1.24 2004/03/08 20:27:13 minskim Exp $
 # FreeBSD Id: Makefile,v 1.6 1998/08/07 23:56:12 asami Exp
 #
 
@@ -15,7 +15,7 @@ COMMENT=	Tcl/tk interface to Sam Leffler's fax package
 
 DEPENDS+=	gv>=3.5.8nb1:../../print/gv
 DEPENDS+=	hylafax>=4.1:../../comms/hylafax
-DEPENDS+=	tk>=8.3.2:../../x11/tk
+DEPENDS+=	tk>=8.3.2:../../x11/tk83
 
 WRKSRC=		${WRKDIR}/tkhylafax
 
