--- a/devel/tkcvs/Makefile
+++ b/devel/tkcvs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.27 2003/07/17 21:34:09 grant Exp $
+# $NetBSD: Makefile,v 1.28 2004/03/08 20:27:14 minskim Exp $
 #
 
 DISTNAME=	tkcvs_7_1_2
@@ -21,5 +21,5 @@ post-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/tkcvs
 	${INSTALL_DATA} ${WRKSRC}/README.tkcvs ${PREFIX}/share/doc/tkcvs/
 
-.include "../../x11/tk/buildlink2.mk"
+.include "../../x11/tk83/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
