--- a/devel/tkdiff/Makefile
+++ b/devel/tkdiff/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2004/02/16 16:34:02 recht Exp $
+# $NetBSD: Makefile,v 1.12 2004/03/08 20:27:14 minskim Exp $
 #
 
 DISTNAME=	tkdiff_3_09
@@ -11,7 +11,7 @@ MAINTAINER=	recht@NetBSD.org
 HOMEPAGE=	http://www.accurev.com/free/tkdiff/
 COMMENT=	Graphical 2-way diff/merge tool
 
-DEPENDS+=	tk>=8.3.2:../../x11/tk
+DEPENDS+=	tk>=8.3.2:../../x11/tk83
 
 NO_BUILD=	yes
 NO_CONFIGURE=	yes
