--- a/finance/tclticker/Makefile
+++ b/finance/tclticker/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2004/01/28 01:50:41 grant Exp $
+# $NetBSD: Makefile,v 1.8 2004/03/08 20:27:14 minskim Exp $
 #
 
 DISTNAME=	tclticker-1.1
@@ -8,7 +8,7 @@ MASTER_SITES=	http://www.neosoft.com/tcl/ftparchive/sorted/apps/tclticker/1.1/
 MAINTAINER=	tech-pkg@NetBSD.org
 COMMENT=	Stock-quote ticker tape application
 
-DEPENDS+=	tk>=8.3.2:../../x11/tk
+DEPENDS+=	tk>=8.3.2:../../x11/tk83
 
 NO_BUILD=	yes
 
