--- a/lang/smalltalk/Makefile
+++ b/lang/smalltalk/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2004/03/08 19:52:51 minskim Exp $
+# $NetBSD: Makefile,v 1.26 2004/03/08 20:27:14 minskim Exp $
 
 DISTNAME=		smalltalk-2.1.4
 CATEGORIES=		lang
@@ -35,6 +35,6 @@ TEST_TARGET=		check
 .include "../../devel/gettext-lib/buildlink2.mk"
 .include "../../devel/readline/buildlink2.mk"
 .include "../../lang/tcl83/buildlink2.mk"
-.include "../../x11/tk/buildlink2.mk"
+.include "../../x11/tk83/buildlink2.mk"
 .include "../../databases/gdbm/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
