--- a/lang/tcl-otcl/Makefile
+++ b/lang/tcl-otcl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2004/02/14 00:54:45 grant Exp $
+# $NetBSD: Makefile,v 1.8 2004/03/08 20:27:14 minskim Exp $
 
 DISTNAME=	otcl-1.0a8
 PKGNAME=	tcl-${DISTNAME:S/a/rc/}
@@ -36,5 +36,5 @@ post-install:
 	${INSTALL_DATA} ${WRKSRC}/doc/${_file_} ${DOCDIR}
 .endfor
 
-.include "../../x11/tk/buildlink2.mk"
+.include "../../x11/tk83/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
