--- a/lang/tk-expect/Makefile
+++ b/lang/tk-expect/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2003/07/21 16:54:07 martti Exp $
+# $NetBSD: Makefile,v 1.14 2004/03/08 20:27:14 minskim Exp $
 #
 
 .include "../../lang/tcl-expect/Makefile.common"
@@ -9,7 +9,7 @@ CATEGORIES=	lang
 MAINTAINER=	jwise@NetBSD.org
 COMMENT=	Tcl interpreter with both the expect and tk extensions built in
 
-DEPENDS+=	tk>=8.3.2:../../x11/tk
+DEPENDS+=	tk>=8.3.2:../../x11/tk83
 DEPENDS+=	tcl-expect-${EXPECT_VERSION}:../../lang/tcl-expect
 
 CONFIGURE_ARGS= --enable-shared \
