--- a/mbone/rat/Makefile
+++ b/mbone/rat/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.20 2004/01/24 14:00:13 grant Exp $
+# $NetBSD: Makefile,v 1.21 2004/03/08 20:27:15 minskim Exp $
 #
 
 DISTNAME=	rat-3.0.28
@@ -9,7 +9,7 @@ MAINTAINER=	mycroft@NetBSD.org
 HOMEPAGE=	http://www-mice.cs.ucl.ac.uk/multimedia/software/rat/
 COMMENT=	Robust Audio Tool - multicast audioconferencing
 
-DEPENDS+=	tk>=8.3.2:../../x11/tk
+DEPENDS+=	tk>=8.3.2:../../x11/tk83
 
 CRYPTO=		yes
 USE_GNU_TOOLS+=	make
