--- a/mbone/sdr/Makefile
+++ b/mbone/sdr/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.39 2004/01/24 14:00:13 grant Exp $
+# $NetBSD: Makefile,v 1.40 2004/03/08 20:27:15 minskim Exp $
 #
 
 DISTNAME=	sdr-3.0
@@ -9,7 +9,7 @@ MAINTAINER=	is@NetBSD.org
 HOMEPAGE=	http://www-mice.cs.ucl.ac.uk/multimedia/software/sdr/
 COMMENT=	MBone Session Directory
 
-DEPENDS+=	tk>=8.3.2:../../x11/tk
+DEPENDS+=	tk>=8.3.2:../../x11/tk83
 DEPENDS+=	common-mml>=1.2.0:../common-mml
 
 WRKSRC=		${WRKDIR}/sdr/${SYSDIR}
