--- a/mbone/vat/Makefile
+++ b/mbone/vat/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.45 2004/01/20 12:20:24 agc Exp $
+# $NetBSD: Makefile,v 1.46 2004/03/08 20:27:15 minskim Exp $
 #
 
 DISTNAME=		vatsrc-4.0b2
@@ -10,7 +10,7 @@ MAINTAINER=		mycroft@NetBSD.org
 HOMEPAGE=		http://www-nrg.ee.lbl.gov/vat/
 COMMENT=		The Visual Audio Tool - multicast audioconferencing
 
-DEPENDS+=		tk>=8.3.2:../../x11/tk
+DEPENDS+=		tk>=8.3.2:../../x11/tk83
 DEPENDS+=		gsm-1.0.10:../../audio/gsm
 
 WRKSRC=			${WRKDIR}/${PKGNAME_NOREV}
