--- a/mbone/vic/Makefile
+++ b/mbone/vic/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.26 2004/01/20 12:20:24 agc Exp $
+# $NetBSD: Makefile,v 1.27 2004/03/08 20:27:15 minskim Exp $
 # FreeBSD Id: Makefile,v 1.12 1997/09/11 03:54:53 fenner Exp
 #
 
@@ -18,7 +18,7 @@ MAINTAINER=	is@NetBSD.org
 HOMEPAGE=	http://www-nrg.ee.lbl.gov/vic/
 COMMENT=	MBONE video conferencing tool
 
-DEPENDS+=	tk>=8.3.2:../../x11/tk
+DEPENDS+=	tk>=8.3.2:../../x11/tk83
 
 WRKSRC=		${WRKDIR}/${PKGNAME_NOREV}
 GNU_CONFIGURE=	yes
