--- a/misc/dirdiff/Makefile
+++ b/misc/dirdiff/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2004/02/14 17:21:45 jlam Exp $
+# $NetBSD: Makefile,v 1.4 2004/03/08 20:27:15 minskim Exp $
 #
 
 DISTNAME=	dirdiff-1.6
@@ -12,5 +12,5 @@ COMMENT=	Displays differences between directories
 USE_BUILDLINK2=	yes
 USE_LIBTOOL=	yes
 
-.include "../../x11/tk/buildlink2.mk"
+.include "../../x11/tk83/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
