--- a/misc/nxtvepg/Makefile
+++ b/misc/nxtvepg/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.30 2004/01/24 14:11:10 grant Exp $
+# $NetBSD: Makefile,v 1.31 2004/03/08 20:27:15 minskim Exp $
 
 DISTNAME=	nxtvepg-2.6.0
 
@@ -36,5 +36,5 @@ pre-configure:
 #	cd ${WRKSRC};							\
 #	${GMAKE} depend
 
-.include "../../x11/tk/buildlink2.mk"
+.include "../../x11/tk83/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
