--- a/net/nam/Makefile
+++ b/net/nam/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2004/01/25 17:32:45 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2004/03/08 20:27:15 minskim Exp $
 
 DISTNAME=	nam-src-1.9
 PKGNAME=	${DISTNAME:S/-src//}
@@ -29,5 +29,5 @@ post-install:
 .include  "../../devel/zlib/buildlink2.mk"
 .include  "../../lang/tcl-otcl/buildlink2.mk"
 .include  "../../devel/tcl-tclcl/buildlink2.mk"
-.include "../../x11/tk/buildlink2.mk"
+.include "../../x11/tk83/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
