--- a/net/ttt/Makefile
+++ b/net/ttt/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2004/01/13 23:35:38 xtraeme Exp $
+# $NetBSD: Makefile,v 1.8 2004/03/08 20:27:15 minskim Exp $
 #
 
 DISTNAME=	ttt-1.8
@@ -17,5 +17,5 @@ INSTALL_TARGET=	install install-man
 
 .include "../../net/libpcap/buildlink2.mk"
 .include "../../x11/blt/buildlink2.mk"
-.include "../../x11/tk/buildlink2.mk"
+.include "../../x11/tk83/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
