--- a/parallel/openpbs/Makefile
+++ b/parallel/openpbs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2003/12/03 22:14:46 kristerw Exp $
+# $NetBSD: Makefile,v 1.4 2004/03/08 20:27:15 minskim Exp $
 #
 
 DISTNAME=		OpenPBS_2_3_16
@@ -35,5 +35,5 @@ _REPLACE_FILES.tk2+=	src/tools/xpbsmon/xpbsmon.src
 
 _CONFIGURE_POSTREQ+=     replace-interpreter
 
-.include "../../x11/tk/buildlink2.mk"
+.include "../../x11/tk83/buildlink2.mk"
 .include "../../mk/bsd.pkg.mk"
