--- a/sysutils/lavaps/Makefile
+++ b/sysutils/lavaps/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2004/01/20 12:26:15 agc Exp $
+# $NetBSD: Makefile,v 1.17 2004/03/08 20:27:15 minskim Exp $
 #
 
 DISTNAME=	lavaps-1.20
@@ -10,7 +10,7 @@ MAINTAINER=	hubertf@NetBSD.org
 HOMEPAGE=	http://www.isi.edu/~johnh/SOFTWARE/LAVAPS/
 COMMENT=	Lava lamp of currently running processes
 
-DEPENDS+=	tk>=8.3.2:../../x11/tk
+DEPENDS+=	tk>=8.3.2:../../x11/tk83
 USE_PERL5=	build
 
 WRKSRC=		${WRKDIR}/${PKGNAME_NOREV}
