--- a/sysutils/xhfs/Makefile
+++ b/sysutils/xhfs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2003/07/17 22:53:58 grant Exp $
+# $NetBSD: Makefile,v 1.7 2004/03/08 20:27:16 minskim Exp $
 #
 
 DISTNAME=	hfsutils-3.2.6
@@ -11,7 +11,7 @@ HOMEPAGE=	http://www.mars.org/home/rob/proj/hfs/
 COMMENT=	Tk GUI + Tcl Shell for accessing HFS volumes
 
 DEPENDS=	libhfs-3.2.6:../../devel/libhfs
-DEPENDS+=	tk>=8.3.2:../../x11/tk
+DEPENDS+=	tk>=8.3.2:../../x11/tk83
 
 USE_X11=	yes
 
