--- a/x11/XF86Setup/Makefile
+++ b/x11/XF86Setup/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.31 2004/03/08 19:52:52 minskim Exp $
+# $NetBSD: Makefile,v 1.32 2004/03/08 20:27:17 minskim Exp $
 
 DISTNAME=		XF86Setup-3.3.6
 PKGREVISION=		1
@@ -11,7 +11,7 @@ HOMEPAGE=		http://www.xfree86.org/
 COMMENT=		Graphical configuration tool for XFree86
 
 BUILD_DEPENDS= 		tcl>=8.3.2:../../lang/tcl83
-BUILD_DEPENDS+=		tk>=8.3.2:../../x11/tk
+BUILD_DEPENDS+=		tk>=8.3.2:../../x11/tk83
 
 ONLY_FOR_PLATFORM=	*-*-i386
 
