--- a/x11/tkinfo/Makefile
+++ b/x11/tkinfo/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2003/07/17 22:56:47 grant Exp $
+# $NetBSD: Makefile,v 1.18 2004/03/08 20:27:17 minskim Exp $
 # FreeBSD Id: Makefile,v 1.15 1997/12/16 09:26:12 tg Exp
 #
 
@@ -11,7 +11,7 @@ MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://math-www.uni-paderborn.de/~axel/tkinfo/
 COMMENT=	Tk script to read and display GNU "info" files
 
-DEPENDS=	tk>=8.3.2:../../x11/tk
+DEPENDS=	tk>=8.3.2:../../x11/tk83
 
 USE_X11=	yes
 NO_BUILD=	yes
