--- a/x11/tkman/Makefile
+++ b/x11/tkman/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.35 2004/01/20 12:28:27 agc Exp $
+# $NetBSD: Makefile,v 1.36 2004/03/08 20:27:17 minskim Exp $
 # FreeBSD Id: Makefile,v 1.28 1997/12/08 15:51:20 tg Exp
 #
 
@@ -13,7 +13,7 @@ HOMEPAGE=		http://tkman.sourceforge.net/
 COMMENT=		Tcl/Tk based manual browser
 
 DEPENDS+=		glimpse>=4.1:../../textproc/glimpse
-DEPENDS+=		tk>=8.3.2:../../x11/tk
+DEPENDS+=		tk>=8.3.2:../../x11/tk83
 
 WRKSRC=			${WRKDIR}/${PKGNAME_NOREV}
 USE_RMAN=		yes
