We need to pre-create the locale directory before copying the locale.alias file into place.  Bump the PKGREVISION to 6.

--- a/devel/gettext-lib/Makefile
+++ b/devel/gettext-lib/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.38 2005/08/19 22:30:01 jlam Exp $
+# $NetBSD: Makefile,v 1.39 2005/08/21 02:31:27 jlam Exp $
 
 DISTNAME=		gettext-0.11.5
 PKGNAME=		gettext-lib-0.11.5
 SVR4_PKGNAME=		gttli
-PKGREVISION=		5
+PKGREVISION=		6
 CATEGORIES=		devel
 MASTER_SITES=		${MASTER_SITE_GNU:=gettext/}
 
@@ -32,6 +32,7 @@ EGDIR=			${PREFIX}/share/examples/gettext
 LOCALEDIR=		${PREFIX}/${PKGLOCALEDIR}/locale
 
 USE_PKGINSTALL=		yes
+REQD_DIRS+=		${LOCALEDIR}
 REQD_FILES+=		${EGDIR}/locale.alias ${LOCALEDIR}/locale.alias
 
 .include "../../mk/bsd.prefs.mk"
